# workshop-webscraping

./: pyproject.toml
crawler/: ml_browser.py
